...
    }
    
    @MainActor
    func start() {
        let settingsView = SettingsView()
        let hostingController = UIHostingController(rootView: settingsView)
        hostingController.title = "Настройки"
        
        navigationController.pushViewController(hostingController, animated: false)
    }
    
    func showNotificationSettings() {
        // TODO: Implement NotificationSettingsView
...
    }
    
    func showDebugMenu() {
        #if DEBUG
        let view = DebugMenuView()
        let hostingController = UIHostingController(rootView: view)
        hostingController.title = "Debug Menu"
        
        navigationController.pushViewController(hostingController, animated: true)
        #endif
    }
    
    func logout() {
...
